<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">HW Dev</string>
    <string name="title_section2">Media</string>
    <string name="title_section3">Multi-Touch</string>
    <string name="Commands">Commands Sent Are:</string>
    <string name="title_activity_multi_touch">Multi-touch Surface</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">Multi-Touch\nActivity</string>
    <string name="enter_command">Enter Parameters</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="Sent">Commands Sent:</string>
    <string name="Camera" translatable="false">Here is the camera</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="hello" translatable="false">Hello World, FileExplore!</string>
    <string name="title_activity_audio_chooser">Audio Chooser</string>
    <string name="title_activity_file_chooser">File Chooser</string>
    <string name="title_activity_load_file_chooser">Run File Chooser</string>
    <string name="title_activity_save_file_chooser">Save File Chooser</string>
    <string name="title_help_servo_activity" translatable="false">Help Servo</string>
    <string name="title_language_activity">Language Setting</string>
    <string name="language_setting_message">Language Setting Success, Your Setting Will Apply When RoboApp Starts Next Time</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="Select">Selected File</string>
    <string name="Cat_Scream" translatable="false">Cat_Scream_SoundBible.com_871191563</string>
    <string name="Cat_Meow" translatable="false">Cat_Meow_2-Cat_Stevens_2034822903</string>
    <string name="Cat_Roar" translatable="false">Roaring_Lion_SoundBible.com_527774719</string>

    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="help_text" translatable="false"><b>Servo Control</b>: help for servo control\n<b>Media</b>: help for media\n<b>Multi-Touch</b>: help for multi-touch\n\nDeveloper will add more information here, please wait for it.
    </string>

    <string name="multi_touch_file_select">Select</string>
    <string name="none_selected">None Selected</string>

    <string name="MultiMainLabel">Commands - Up, Down, Left, Right\nDiagonal, Pinch, and Expand for audio</string>

    <string name="AboutData">RoboApp \n\nPrevious Team: RoboApp:\nJoey Phelps\nTim Grannen</string>
    <string name="AboutDataNew">Current Team: RoboApp:\nPinfang Ding\nChong Liu\nMatthew King\nMatt Hutton</string>
    <string name="title_robo_cat_activity">RoboCat Servos</string>
    <string name="servo">Servo</string>
    <string name="home">Home</string>
    <string name="pwm">Test</string>
    <string name="pwmOnTime" translatable="false">PWM On Time</string>
    <string name="pwmperiod" translatable="false">PWM Period</string>
    <string name="ontime">Test</string>
    <string name="period">Test</string>
    <string name="errors"></string>
    <string name="position">Position</string>
    <string name="speed">Speed</string>
    <string name="acceleration">Acceleration</string>
    <string name="AduinoTorque" translatable="false">Torque</string>
    <string name="channel1" translatable="false">LB-SD: </string>
    <string name="channel2" translatable="false">LB-KN: </string>
    <string name="channel3" translatable="false">LB-LR: </string>
    <string name="channel4" translatable="false">RB-SD: </string>
    <string name="channel5" translatable="false">RB-KN: </string>
    <string name="channel6" translatable="false">RB-LR: </string>
    <string name="channel7" translatable="false">LF-SD: </string>
    <string name="channel8" translatable="false">LF-KN: </string>
    <string name="channel9" translatable="false">LF-LR: </string>
    <string name="channel10" translatable="false">RF-SD: </string>
    <string name="channel11" translatable="false">RF-KN: </string>
    <string name="channel12" translatable="false">RF-LR: </string>
    <string name="moveAllChannelsToHomePosition">Reset </string>
    <string name="buttonpololurecordstring">Record </string>
    <string name="channelPositionResetValue" translatable="false">1500 </string>
    <string name="iterationText">Iterations:</string>
    <string name="timeText">Seconds:</string>
    <string name="accelerationText">Acceleration:</string>
    <string name="stringArduinoTorqueValue" translatable="false">Ard</string>
    <string name="runGaitButtonString">Run Gait</string>
    <string name="clearGaitButtonString">Clear Gait</string>
    <string name="ExitString">Exit</string>
    <string name="PlayAudioFile">Play Audio</string>
    <string name="RecordAudio">Record Audio</string>
    <string name="run">Run</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="servocontrol">Servo Control</string>
    <string name="language">Language</string>
    <string name="set_language">Select Language</string>
    <string name="english" translatable="false">English,US</string>
    <string name="chinese" translatable="false">简体中文,中国</string>
    <string name="errorMessage">USB device disconnected</string>
    <string name="connectedMessage" translatable="false">USB device connected</string>
    <string name="servoPositions">Servo Positions:\n</string>
    <string name="catView">Cat View</string>
    <string name="multiOperation" translatable="false">Multi-Touch\nOperation</string>
    <string name="command" translatable="false">Command to Perform</string>
    <string name="enterMulti">Enter Multi-Touch</string>
    <string name="oneUp">One Up</string>
    <string name="oneDown">One Down</string>
    <string name="oneLeft">One Left</string>
    <string name="oneRight">One Right</string>
    <string name="twoUp">Two Up</string>
    <string name="twoDown">Two Down</string>
    <string name="twoLeft">Two Left</string>
    <string name="twoRight">Two Right</string>
    <string name="pinch" translatable="false">Pinch</string>
    <string name="expand" translatable="false">Expand</string>
    <string name="back">Back</string>
</resources>
