<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainAct$DummySectionFragment"
    android:background="#a3054709">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Header"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/section_header"
            android:text="@string/multiOperation"
            android:textSize="25px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/file_header"
            android:text="@string/command"
            android:textSize="25px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/section_header"
            android:layout_marginBottom="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:id="@+id/TouchEvents"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/Header">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/OneUpView">

            <TextView
                android:id="@+id/one_up_label"
                android:text="@string/oneUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/one_up_file"
                android:text="@string/none_selected"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/OneUpFrame"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/OneUpFrame"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/multi_touch_file_select"
                    android:id="@+id/one_up_select"
                    android:layout_alignParentRight="true"
                    android:textSize="20px"
                    android:onClick="selectFileToBeMapped"
                    android:layout_alignParentTop="true"
                    android:background="#ff5f8862"/>
            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/OneRightView"
            android:layout_below="@+id/OneUpView"
            >

            <TextView
                android:id="@+id/one_right_label"
                android:text="@string/oneRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/one_right_file"
                android:text="@string/none_selected"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/OneRightFrame"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/OneRightFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:id="@+id/one_right_select"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:onClick="selectFileToBeMapped"
                    android:text="@string/multi_touch_file_select"
                    android:textSize="20px"
                    android:background="#ff5f8862"/>
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/OneLeftView"
            android:layout_below="@+id/OneRightView">

            <TextView
                android:id="@+id/one_left_label"
                android:text="@string/oneLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/one_left_file"
                android:text="@string/none_selected"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/one_left_label"
                android:layout_toLeftOf="@+id/OneLeftFrame" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/OneLeftFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:id="@+id/one_left_select"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:onClick="selectFileToBeMapped"
                    android:text="@string/multi_touch_file_select"
                    android:textSize="20px"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="#ff5f8862"/>
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/OneDownView"
            android:layout_below="@+id/OneLeftView">

            <TextView
                android:id="@+id/one_down_label"
                android:text="@string/oneRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:id="@+id/one_down_file"
                android:text="@string/none_selected"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/OneDownFrame" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:id="@+id/OneDownFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:id="@+id/one_down_select"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:onClick="selectFileToBeMapped"
                    android:text="@string/multi_touch_file_select"
                    android:textSize="20px"
                    android:layout_alignParentRight="true"
                    android:background="#ff5f8862"/>
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/TwoUpView"
            android:layout_below="@+id/OneDownView" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twoUp"
                android:id="@+id/two_up_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="false" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/none_selected"
                android:id="@+id/two_up_file"
                android:layout_toLeftOf="@+id/TwoUpFrame"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:id="@+id/TwoUpFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/multi_touch_file_select"
                    android:id="@+id/two_up_select"
                    android:layout_alignParentRight="true"
                    android:onClick="selectFileToBeMapped"
                    android:textSize="20px"
                    android:background="#ff5f8862"/>
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TwoUpView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/TwoDownView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twoDown"
                android:id="@+id/two_down_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/none_selected"
                android:id="@+id/two_down_file"
                android:layout_toLeftOf="@+id/TwoDownFrame" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="right|center_vertical"
                android:id="@+id/TwoDownFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/multi_touch_file_select"
                    android:id="@+id/two_down_select"
                    android:layout_alignParentRight="true"
                    android:onClick="selectFileToBeMapped"
                    android:textSize="20px"
                    android:background="#ff5f8862"/>
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PinchView"
            android:layout_below="@+id/TwoDownView"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pinch"
                android:id="@+id/pinch_label"
                android:layout_alignBottom="@+id/pinch_select"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/none_selected"
                android:id="@+id/pinch_file"
                android:layout_toLeftOf="@+id/PinchFrame" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/PinchFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/multi_touch_file_select"
                    android:id="@+id/pinch_select"
                    android:layout_alignParentRight="true"
                    android:onClick="selectFileToBeMapped"
                    android:textSize="20px"
                    android:background="#ff5f8862"/>
            </FrameLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Expand"
            android:layout_below="@+id/PinchView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand"
                android:id="@+id/expand_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ExpandFrame"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                android:background="#ff436246">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/multi_touch_file_select"
                    android:id="@+id/expand_select"
                    android:onClick="selectFileToBeMapped"
                    android:textSize="20px"
                    android:background="#ff5f8862"
                    android:layout_below="@+id/PinchView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </FrameLayout>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/none_selected"
                android:id="@+id/expand_file"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/ExpandFrame"
                android:layout_toStartOf="@+id/ExpandFrame" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/EnterMultiTouchFrame"
            android:layout_alignParentBottom="true"
            android:padding="2dp"
            android:background="#ff436246">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterMulti"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:onClick="Start_multi"
                android:background="#ff5f8862"/>
        </FrameLayout>

    </RelativeLayout>


</RelativeLayout>
